fixed item alignment

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html {
   
   .photo {
     width: 15vw;
-    height: 15vw;
+    height: 18vw;
     border-radius: 50%;
     z-index: 1;
     position: relative;
@@ -58,7 +58,7 @@ html {
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
-    justify-self: center;
+    justify-self: start;
     align-self: center;
   }
 
@@ -113,9 +113,11 @@ html {
     "bottom-left . face . bottom-right";
 
 
-    width: 50vw;
-    height: 25vw;
+    width: 48.3vw;
+    height: 20vw;
     background-image: url(Fake_currency-1000_dollar_bill.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
     background-color: rgb(78, 124, 78);
     z-index: 0;
     border: none;
